# gpsxdb

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_regional_bundles.sh  count_mmap.py  cpp  create.sql  create_airports.sql  dq_check.py  it  load_copernicus_final.sh  load_copernicus_global_rest.sh  load_copernicus_regions.sh  me  monitor.sh  postwork.sql  prework.sql  requirements-dq_check.txt  runit.sh  runit2.sh
include/: AirportsLoader.h  AirspaceLoader.h  DbClient.h  DbConn.h  DeltaApplier.h  FAAObstacleLoader.h  GeoUtils.h  Log.h  NavDB.h  OSCReader.h  OSMMMap.h  OSMReader.h  PlanetDownloader.h  RegionalNodeMap.h  Regions.h  Replicator.h  TerrainLoader.h  WMMLoader.h
proto/: fileformat.proto  osmformat.proto
src/: AirportsLoader.cpp  AirspaceLoader.cpp  DeltaApplier.cpp  FAAObstacleLoader.cpp  GeoUtils.cpp  NavDB (1).cpp  NavDB.cpp  OSCReader.cpp  OSMMMap.cpp  OSMReader.cpp  PlanetDownloader.cpp  RegionalNodeMap.cpp  Replicator.cpp  TerrainLoader.cpp  WMMLoader.cpp  airports_load.cpp  airspace_load.cpp  faa_obstacles_load.cpp  main (2).cpp  main (4).cpp  main.cpp  regional_db_export.cpp  regional_export.cpp  regional_install.cpp  terrain_load.cpp  wmm_load.cpp
tmp/: NavDB.cpp
